overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rssFeed-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rssFeed-qa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rssFeed-qa
                port:
                  number: 3000
